tests/negative/semantic/wrong_arg_count_formatdate/input.ci
void main() {
    print(toString(formatDate(0)) + "\n");
}
